# TACO_2017

./: .gitignore  LICENSE.md  README.md
server/: CMakeLists.txt
server/config/: README.md
server/config/2016/: UserConfig.prj
server/config/2016/config/: system.Common.runninglayout  system.config_layout  system.layout  system.xml
server/config/2017/config/: SteeringConfig.xml  system.Common.runninglayout  system.config_layout  system.xml
server/config/2017/config/system_config_files/: __kernel_scheduling.config
server/include/rapidjson/: allocators.h  document.h  encodedstream.h  encodings.h  filereadstream.h  filewritestream.h  fwd.h  istreamwrapper.h  memorybuffer.h  memorystream.h  ostreamwrapper.h  pointer.h  prettywriter.h  rapidjson.h  reader.h  schema.h  stream.h  stringbuffer.h  writer.h
server/include/rapidjson/error/: en.h  error.h
server/include/rapidjson/internal/: biginteger.h  diyfp.h  dtoa.h  ieee754.h  itoa.h  meta.h  pow10.h  regex.h  stack.h  strfunc.h  strtod.h  swap.h
server/include/rapidjson/msinttypes/: inttypes.h  stdint.h
server/scripts/: build.sh  clean.sh  fixNVIDIA.sh
server/src/: CMakeLists.txt
server/src/adtf/: CMakeLists.txt
server/src/adtf/decoder/: ADTFPinMessageDecoder.cpp  ADTFPinMessageDecoder.h  AccelerometerDecoder.cpp  AccelerometerDecoder.h  CameraDecoder.cpp  CameraDecoder.h  Decoder.cpp  Decoder.h  DepthImageDecoder.cpp  DepthImageDecoder.h  GyroDecoder.cpp  GyroDecoder.h  IMUDecoder.cpp  IMUDecoder.h  InputPin.h  JuryDecoder.cpp  JuryDecoder.h  ManeuverListDecoder.cpp  ManeuverListDecoder.h  RoadSignDecoder.cpp  RoadSignDecoder.h  ValueGroupDecoder.cpp  ValueGroupDecoder.h  WheelTickDecoder.cpp  WheelTickDecoder.h
server/src/adtf/encoder/: ADTFPinMessageEncoder.cpp  ADTFPinMessageEncoder.h  OutputPin.h
server/src/adtf/filters/: RateLimit.cpp  RateLimit.h  RuntimeService.cpp  RuntimeService.h
server/src/adtf/filters/cameraImageRelay/: CMakeLists.txt  CameraImageRelay.cpp  CameraImageRelay.h
server/src/adtf/filters/fisheyeUndistortionROI/: CMakeLists.txt  FisheyeUndistortionROI.cpp  FisheyeUndistortionROI.h  stdafx.h
server/src/adtf/filters/imageWriter/: CMakeLists.txt  ImageWriter.cpp  ImageWriter.h
server/src/hsogserver/: AADCCar.h  CMakeLists.txt
server/src/hsogserver/action/: IAction.h  IEffector.h  IManeuverStatusEffector.h  IObstacleEffector.h  IParkingSpaceEffector.h  IPositionEffector.h  IRoadSignEffector.h  IValueEffector.h
server/src/hsogserver/action/impl/: Action.cpp  Action.h  Effector.h  ManeuverStatusEffector.h  ObstacleEffector.h  ParkingSpaceEffector.h  PositionEffector.h  RoadSignEffector.h  ValueEffector.h
server/src/hsogserver/communication/: ByteConverter.h  Communication.cpp  Communication.h  PackageDecoder.cpp  PackageDecoder.h  PackageEncoder.cpp  PackageEncoder.h
server/src/hsogserver/communication/Encoder/: DoubleValuePerceptorEncoder.h  EncoderUtilities.h  EnvironmentConfigEncoder.h  FloorNormalEncoder.h  IEncoder.h  IMUPerceptorEncoder.h  JuryPerceptorEncoder.h  LaneAssistEncoder.h  ManeuverListPerceptorEncoder.h  ObjectDetectionEncoder.h  PerceptorEncoder.h  RoadSignPerceptorEncoder.h  WheelTickPerceptorEncoder.h
server/src/hsogserver/communication/Handler/: BoolEffectorHandler.h  DoubleEffectorHandler.h  EffectorHandler.h  IHandler.h  ManeuverStatusEffectorHandler.h  ObstacleEffectorHandler.h  ParkingSpaceEffectorHandler.h  PositionEffectorHandler.h  RoadSignEffectorHandler.h
server/src/hsogserver/detection/: CMakeLists.txt  FloorNormalDetection.cpp  FloorNormalDetection.h  ILaneDetection.h  IObjectDetection.h  IRoadSign.h  IVisibleObject.h  RoadSign.cpp  RoadSign.h  VisibleObject.cpp  VisibleObject.h
server/src/hsogserver/detection/lanedetection/: EdgeDetector.h  LaneAssist.cpp  LaneAssist.h  LaneDetection.cpp  LaneDetection.h  LaneDetectionConfiguration.h  LaneDetectionRenderer.cpp  LaneDetectionRenderer.h  LaneMiddle.h  Line.cpp  Line.h  PixelToCamera.cpp  PixelToCamera.h  ScanLine.cpp  ScanLine.h  WideAngleCameraConfig.h
server/src/hsogserver/detection/objectdetection/: IResource.h  ObjectDetection.cpp  ObjectDetection.h  PointCloudWorker.cpp  PointCloudWorker.h  SensorFusion.cpp  SensorFusion.h
server/src/hsogserver/detection/signdetection/: SignDetection.cpp  SignDetection.h
server/src/hsogserver/general/: ComponentFactory.cpp  ComponentFactory.h  IComponentFactory.h  LogComponentFactory.h
server/src/hsogserver/meta/: IActuatorConfig.h  IAxleConfig.h  ICameraConfig.h  ICarMetaModel.h  IDistanceSensorConfig.h  ISensorConfig.h  IServoDriveConfig.h
server/src/hsogserver/meta/impl/: ActuatorConfig.cpp  ActuatorConfig.h  AxleConfig.cpp  AxleConfig.h  CameraConfig.cpp  CameraConfig.h  CarMetaModel.cpp  CarMetaModel.h  DistanceSensorConfig.cpp  DistanceSensorConfig.h  JSONCarMetaModel.cpp  JSONCarMetaModel.h  JSONCarMetaModelHandler.h  SensorConfig.cpp  SensorConfig.h  ServoDriveConfig.cpp  ServoDriveConfig.h
server/src/hsogserver/perception/: IAccelerometerPerceptor.h  ICameraPerceptor.h  IGyroPerceptor.h  IIMUPerceptor.h  IJuryConstants.h  IJuryPerceptor.h  IManeuverListPerceptor.h  IPerception.h  IPerceptor.h  IPointCloudPerceptor.h  IRoadSignPerceptor.h  IValuePerceptor.h  IWheelTickPerceptor.h
server/src/hsogserver/perception/impl/: AccelerometerPerceptor.h  CameraPerceptor.h  GyroPerceptor.h  IMUPerceptor.h  JuryPerceptor.h  Maneuver.h  ManeuverListPerceptor.h  Perception.cpp  Perception.h  Perceptor.h  PointCloudPerceptor.h  RoadSignPerceptor.h  ValuePerceptor.h  WheelTickPerceptor.h
server/src/hsogserver/utils/concurrency/: BlockingQueue.h  Runnable.h  Worker.h
server/src/hsogserver/utils/configurationreader/: ConfigRoadSign.h  ConfigurationReader.cpp  ConfigurationReader.h  EnvironmentConfiguration.h  ParkingSpace.h
server/src/hsogserver/utils/driveinstructionreader/: DriveInstructionReader.cpp  DriveInstructionReader.h
server/src/hsogserver/utils/geometry/: AlignedBoundingBox3D.cpp  AlignedBoundingBox3D.h  Angle.cpp  Angle.h  BoundingBox2D.cpp  BoundingBox2D.h  Circle2D.cpp  Circle2D.h  Cosine.cpp  Cosine.h  Geometry.cpp  Geometry.h  (+13 more)
(+716 files in other folders)
